# task-manager

./: .flake8  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini
deploy/python/: Dockerfile  uwsgi.ini
src/: conftest.py
src/api/: models.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_task.py
src/api/tests/: test_task.py  test_user.py
src/api/tests/factories/: task.py  user.py
src/task_manager/: settings.py  urls.py
