[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Danil Galeev <galoffdan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
ipython = "^8.31.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120